# fixed_point_math

./: README.md  meson.build
include/: fixed_point_float_conversions.hpp  fixed_point_math.hpp  fixed_point_print.hpp  fixed_point_type.hpp
test/: meson.build  test_all.cpp  test_arithmetic.cpp  test_arithmetic.hpp  test_ctor.cpp  test_ctor.hpp  test_helper.hpp
