project(
    'fixed-point-math', # project name
    'cpp', # C++ project
    version : '0.1.0',
    default_options : ['cpp_std=c++20'])

# it will be referred from subdir projects
inc = include_directories('include')

# meson will try to find a meson.build file inside following directories
subdir('test')
